--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background:  #C5FFFD;
+    background-image: url("https://wallpaperstock.net/smoothy-de-oliva-wallpapers_976_1280x1024.jpg");
 }
 .name{
     width: 100%;
